@@ -1,4 +1,4 @@
-VERSION=1.2.24
+VERSION=1.2.25
 PYTHON=python
 
 help:
