@@ -1,3 +1,7 @@
+2014/07/06 (1.2.25)
+- New WebAPI endpoint: /skip (POST).
+- Added listeners cound in status.json.
+
 2014/06/27 (1.2.24)
 - WebAPI reports all tags in the cloud, not 5+ tracks only.
 
